client/css/stylesheet.css
body {
    padding-top: 70px;
}
h1 {
    font-family: Domine;
    font-size: 72pt;
    color: #333333;
}
h2 {
    font-family: Quattrocento Sans;
    font-size: 30pt;
    color: #333333;
}
.nav.navbar-nav li a {
    color: #333333;
}
.nav.navbar-nav li a:hover {
    color: #ff6600;
    background-color: transparent;
}

.logo {
    max-height: 25px;
    max-width: 25px;
}
.boxes {
    background-color: rgba(255, 255, 255,0.5);
    margin: 10px;
}
.main_row {
    margin: 10px;
}
.hero {
  background-image: linear-gradient(to bottom, rgba(255,255,255,0.4) 0%,rgba(255,255,255,0.4) 100%), url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/U5LYW9UWS0.jpg');
  background-size: cover;
  text-align: left;
  height: 1000px;
  color: #333333;
  padding: 10px 10px 0px 10px;
}
.portfolio-item {
    margin-bottom: 25px;
}
.grid-sizer,
.grid-item { 
      float: left;
      width: 20%;
      border: 2px solid hsla(0, 0%, 0%, 0.5);
    
}
.grid-item--width2 { width: 160px; }
.grid-item--height2 { height: 140px; }

.sub_header {
    font-family: "Quattrocento Sans";
    font-size: 22pt;
    color: #333333;
    padding: 0px 10px 0px 10px;
}
.features {
    padding: 0px 10px 0px 10px;
    font-size: 12pt;
    line-height: 175%;
    font-family: "Quattrocento Sans";
    color: #333333;
    text-align: justify;
}
.some_section {
    padding: 15px;
}

